--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <div class="main-container">
-    <aside class="sidebar visible" id="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="sidebar-section active">
         <h3 class="sidebar-title">مقدمة وأساسيات دارت</h3>
         <ul class="sidebar-list">
