--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="dark-mode">
   <header class="header">
     <div class="header-container">
@@ -30,6 +32,138 @@
           <li class="sidebar-item" data-article="string">السلاسل النصية</li>
           <li class="sidebar-item" data-article="assignment">نكليفات</li>
         </ul>
+
+        <h3 class="sidebar-title">Dart Conditions and Loops</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+        <h3 class="sidebar-title">Dart Functions</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+        <h3 class="sidebar-title">Dart Collection</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Dart File Handling</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Dart Object Oriented Programming</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Dart Null Safety</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Dart Asynchronous Programming</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+        <h3 class="sidebar-title">Dart How To?</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Quiz Game</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+        <h3 class="sidebar-title">Dart Conclusion</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+
+        <h3 class="sidebar-title">Get Certificate</h3>
+        <ul class="sidebar-list">
+          <li class="sidebar-item active" data-article="intro">مقدمة</li>
+          <li class="sidebar-item" data-article="install">تثبيت</li>
+          <li class="sidebar-item" data-article="data-types">أنواع البيانات</li>
+          <li class="sidebar-item" data-article="comments">التعليقات</li>
+          <li class="sidebar-item" data-article="operators">المعاملات</li>
+          <li class="sidebar-item" data-article="input-user">إدخالات المستخدم</li>
+          <li class="sidebar-item" data-article="string">السلاسل النصية</li>
+          <li class="sidebar-item" data-article="assignment">نكليفات</li>
+        </ul>
+
+
       </div>
     </aside>
 
@@ -46,6 +180,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/dart.min.js"></script>
   <script src="js/main.js"></script>
-  
+
 </body>
+
 </html>
