home screen - footer

--- a/index.html
+++ b/index.html
@@ -180,7 +180,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/dart.min.js"></script>
   <script src="js/main.js"></script>
-
+  <footer>
+    <p class="footer-text">
+      Developed ❤️ by 
+      <a href="https://github.com/darrrwish" class="plain-link" target="_blank" rel="noopener noreferrer">Ahmed Khaled</a>
+    </p>
+  </footer>
+  
 </body>
 
 </html>
