--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
@@ -146,7 +145,7 @@
 
       <div class="developer-accordion">
         <div class="accordion-header">
-          <img src="images/my-avatar.png" alt="Developer">
+          <img src="images\my-avatar.png" alt="Developer">
           <span>معلومات المطور</span>
           <i class="fas fa-chevron-down"></i>
         </div>
