--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/atom-one-dark-reasonable.min.css"> -->
 
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css"> -->
 
-  
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/monokai-sublime.min.css"> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/monokai.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -290,16 +292,16 @@
     
         <!-- قسم المشاريع -->
         <div class="course-level projects">
-          <div class="level-header">
-            <div class="level-number"><i class="fa fa-flask"></i></div>
+          <div class="level-header projects">
+            <div class="level-number projects"><i class="fa fa-flask"></i></div>
             <h3 class="level-title">المشاريع العملية</h3>
           </div>
-          <ul class="level-items">
+          <ul class="level-items projects">
             <li class="course-item" data-article="project1">
               <i class="fa fa-star"></i>
               <span>حاسبة بسيطة</span>
             </li>
-            <li class="course-item" data-article="project2">
+            <li class="course-item projects" data-article="project2">
               <i class="fa fa-star"></i>
               <span>مدير المهام</span>
             </li>
