--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>درويش Dart</title>
+  <title>درويش SQL</title>
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 <body class="dark-mode">
  <header class="header">
   <div class="header-container">
-        <h1 class="logo">Dart<span>درويش</span></h1>
+        <h1 class="logo">SQL<span>درويش</span></h1>
     <button class="theme-toggle" id="themeToggle">
       <i class="fa fa-sun-o" aria-hidden="true"></i>
     </button>
@@ -88,185 +88,7 @@
           </ul>
         </div>
     
-        <!-- المستوى الثالث: الدوال  -->
-        <div class="course-level">
-          <div class="level-header">
-            <div class="level-number">3</div>
-            <h3 class="level-title">الدوال</h3>
-          </div>
-          <ul class="level-items">
-            <li class="course-item" data-article="classes">
-              <i class="fa fa-object-group"></i>
-              <span>الكلاسات والكائنات</span>
-            </li>
-            <li class="course-item" data-article="inheritance">
-              <i class="fa fa-sitemap"></i>
-              <span>التوريث</span>
-            </li>
-            <li class="course-item" data-article="polymorphism">
-              <i class="fa fa-exchange"></i>
-              <span>تعدد الأشكال</span>
-            </li>
-          </ul>
-        </div>
-      <!-- المستوى الرابع : المجموعات -->
-      <div class="course-level">
-        <div class="level-header">
-          <div class="level-number">4</div>
-          <h3 class="level-title">المجموعات</h3>
-        </div>
-        <ul class="level-items">
-          <li class="course-item" data-article="classes">
-            <i class="fa fa-object-group"></i>
-            <span>الكلاسات والكائنات</span>
-          </li>
-          <li class="course-item" data-article="codes">
-            <i class="fa fa-sitemap"></i>
-            <span>التوريث</span>
-          </li>
-          <li class="course-item" data-article="polymorphism">
-            <i class="fa fa-exchange"></i>
-            <span>تعدد الأشكال</span>
-          </li>
-        </ul>
-      </div>
-
-   <!-- المستوى الخامس : التعامل مع ملفات  -->
-   <div class="course-level">
-    <div class="level-header">
-      <div class="level-number">5</div>
-      <h3 class="level-title">التعامل مع الملفات</h3>
-    </div>
-    <ul class="level-items">
-      <li class="course-item" data-article="classes">
-        <i class="fa fa-object-group"></i>
-        <span>الكلاسات والكائنات</span>
-      </li>
-      <li class="course-item" data-article="inheritance">
-        <i class="fa fa-sitemap"></i>
-        <span>التوريث</span>
-      </li>
-      <li class="course-item" data-article="polymorphism">
-        <i class="fa fa-exchange"></i>
-        <span>تعدد الأشكال</span>
-      </li>
-    </ul>
-  </div>
-
-   <!-- المستوى السادس : البرمجة الكائنية -->
-   <div class="course-level">
-    <div class="level-header">
-      <div class="level-number">6</div>
-      <h3 class="level-title">البرمجة الكائنية</h3>
-    </div>
-    <ul class="level-items">
-      <li class="course-item" data-article="classes">
-        <i class="fa fa-object-group"></i>
-        <span>الكلاسات والكائنات</span>
-      </li>
-      <li class="course-item" data-article="inheritance">
-        <i class="fa fa-sitemap"></i>
-        <span>التوريث</span>
-      </li>
-      <li class="course-item" data-article="polymorphism">
-        <i class="fa fa-exchange"></i>
-        <span>تعدد الأشكال</span>
-      </li>
-    </ul>
-  </div>
-
-<!-- المستوى السابع :   Null Safety  -->
-<div class="course-level">
-  <div class="level-header">
-    <div class="level-number">7</div>
-    <h3 class="level-title">Null Safety</h3>
-  </div>
-  <ul class="level-items">
-    <li class="course-item" data-article="classes">
-      <i class="fa fa-object-group"></i>
-      <span>الكلاسات والكائنات</span>
-    </li>
-    <li class="course-item" data-article="inheritance">
-      <i class="fa fa-sitemap"></i>
-      <span>التوريث</span>
-    </li>
-    <li class="course-item" data-article="polymorphism">
-      <i class="fa fa-exchange"></i>
-      <span>تعدد الأشكال</span>
-    </li>
-  </ul>
-</div>
-
-
-
-<!-- المستوى الثامن :  البرمجة غير المتزامنة  -->
-<div class="course-level">
-  <div class="level-header">
-    <div class="level-number">8</div>
-    <h3 class="level-title">البرمجة غير المتزامنة</h3>
-  </div>
-  <ul class="level-items">
-    <li class="course-item" data-article="classes">
-      <i class="fa fa-object-group"></i>
-      <span>الكلاسات والكائنات</span>
-    </li>
-    <li class="course-item" data-article="inheritance">
-      <i class="fa fa-sitemap"></i>
-      <span>التوريث</span>
-    </li>
-    <li class="course-item" data-article="polymorphism">
-      <i class="fa fa-exchange"></i>
-      <span>تعدد الأشكال</span>
-    </li>
-  </ul>
-</div>
-
-
-<!-- المستوى التاسع :   معلومات مفيدة  -->
-<div class="course-level">
-  <div class="level-header">
-    <div class="level-number">9</div>
-    <h3 class="level-title">معلومات مفيدة</h3>
-  </div>
-  <ul class="level-items">
-    <li class="course-item" data-article="classes">
-      <i class="fa fa-object-group"></i>
-      <span>الكلاسات والكائنات</span>
-    </li>
-    <li class="course-item" data-article="inheritance">
-      <i class="fa fa-sitemap"></i>
-      <span>التوريث</span>
-    </li>
-    <li class="course-item" data-article="polymorphism">
-      <i class="fa fa-exchange"></i>
-      <span>تعدد الأشكال</span>
-    </li>
-  </ul>
-</div>
-
-
-<!-- المستوى العاشر :   كيف تستخدم دارت؟  -->
-<div class="course-level">
-  <div class="level-header">
-    <div class="level-number">10</div>
-    <h3 class="level-title">كيف تستخدم</h3>
-  </div>
-  <ul class="level-items">
-    <li class="course-item" data-article="classes">
-      <i class="fa fa-object-group"></i>
-      <span>الكلاسات والكائنات</span>
-    </li>
-    <li class="course-item" data-article="inheritance">
-      <i class="fa fa-sitemap"></i>
-      <span>التوريث</span>
-    </li>
-    <li class="course-item" data-article="polymorphism">
-      <i class="fa fa-exchange"></i>
-      <span>تعدد الأشكال</span>
-    </li>
-  </ul>
-</div>
-
+  
         <!-- المستوى الاحد عشر: تطبيقات متقدمة -->
         <div class="course-level">
           <div class="level-header">
