--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
       
-
+<!-- 
       <div class="developer-accordion">
         <div class="accordion-header">
           <img src="images\my-avatar.png" alt="Developer">
@@ -162,7 +162,7 @@
             <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
 
