--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>درويش SQL</title>
+  <title>SQL Darwish</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
