--- a/index.html
+++ b/index.html
@@ -173,14 +173,10 @@
   <button class="sidebar-toggle" id="sidebarToggle"><i class="fa-solid fa-database"></i></button>
 
   <!-- مكتبات JS -->
-
-      <!-- Backend-base -->
-            <!-- <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script> -->
-          <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/alasql"></script>
+  <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/alasql"></script>
 
 <script>
   // جعل المكتبات متاحة globally
