--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="theme-color" content="#06c1db">
   <title>SQL Darwish</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
 
