--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="theme-color" content="#2E7D32">
   <title>SQL Darwish</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
 
@@ -48,6 +49,14 @@
           <ul class="level-items">
             <li class="course-item active" data-article="home">
               <i class="fa fa-home"></i><span>الصفحة الرئيسية</span>
+            </li>
+          </ul>
+        </div>
+
+         <div class="course-level">
+          <ul class="level-items">
+            <li class="course-item" data-article="road-map">
+              <i class="fa-solid fa-map"></i><span>خارطة الطريق</span>
             </li>
           </ul>
         </div>
