--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
           </ul>
         </div>
 
+
+
+<div class="course-level">
+  <div class="level-header">
+    <div class="level-number"><i class="fa-solid fa-puzzle-piece"></i></div>
+    <h3 class="level-title">مفاهيم أساسية</h3>
+  </div>
+  <ul class="level-items">
+    <li class="course-item active" data-article="intro"><i class="fa fa-database"></i><span>مفاهيم قواعد البيانات العلائقية</span></li>
+    <li class="course-item" data-article="syntax"><i class="fa fa-code"></i><span>الفرق بين SQL و NoSQL</span></li>
+    <li class="course-item" data-article="comments"><i class="fa fa-comment-alt"></i><span>نظم إدارة قواعد البيانات</span></li>
+    <li class="course-item" data-article="datatypes"><i class="fa fa-list-ol"></i><span>تثبيت الأدوات</span></li>
+  </ul>
+</div>
+
+
+
+
         <!-- المستويات التعليمية -->
   <!-- المستوى الأول: الأساسيات والمقدمة -->
 <div class="course-level">
